# turbodb

./: .dockerignore  .gitignore  .zigrep_archive  AGENTS.md  Containerfile  FINDINGS.md  LICENSE  README.md  ROADMAP.md  build.zig  build.zig.zon  publish.sh  root
agent-test/: .gitignore  README.md  agent-slack-compare.audit.ndjson  agent-slack-compare.ts  agent-slack.audit.ndjson  chat.ts  codex-chat-tools.ts  harness.ts  mcp-chat-tools.audit.ndjson  mcp-chat.ts  package.json  swarm.ts
bench/: README_apple_container_matrix.md  agentic_nanoapi_client.py  bench.py  container_shape_bench.py  nanoapi_agent_proxy.zig  recall_smoke.py  run_apple_container_bench.py  run_container_agentic_nanoapi_bench.py  search_demo.py  setup_shard_bench.sh  shard_bench.py  test_calvin_cluster.sh  triple_bench.py  vector_bench.py  wikipedia_bench.py  wikipedia_mongo_bench.py  wikipedia_search_bench.py  wire2_perf_client.zig  wire2_smoke_client.py
benchmark/: regression.json  regression_test.py  results.json  run_1m.py  turbodb_vs_zvec.py
examples/: search_demo.py
js/: index.js  package.json  test.js
optimizations/: docs.md  optimization1.md  optimization2.md  optimization3.md  optimization4_vector_search.md  optimization5_code_layer.md  optimization6_line_diff_conflict.md
parity/: divergence.py  parity_test.py
python/: pyproject.toml  test.py
python/turbodb/: __init__.py  _ffi.py  _wire.py  search.py  stream.py
research/: parallel_indexing.md  posting_list_compression.md  trigram_optimization.md
src/: activity.zig  art.zig  auth.zig  bench_native.zig  bench_partition.zig  (+44 more)
(+35 files in other folders)
