[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turbodatabase"
version = "0.1.0"
description = "Python bindings for TurboDB — a fast NoSQL document database in Zig"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/justrach/turbodb"
